--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <article class="card">
                     <header>
-                        <img src="./asset/buycoins.png" alt="Jiggylife">
+                        <img src="./asset/jiggy.png" alt="Jiggylife">
                         <h3>Jiggylife</h3>
                     </header>
                     <p>
@@ -85,7 +85,7 @@
 
                 <article class="card">
                     <header>
-                        <img src="./asset/sendcash.png" alt="Xendlife">
+                        <img src="./asset/android-chrome-192x192.png" alt="Xendlife">
                         <h3>Xendlife</h3>
                     </header>
                     <p>
@@ -120,26 +120,25 @@
             <div class="cards-three-col">
                 <div class="card">
                     <figure>
-                        <img src="./asset/silver.jpeg" alt="Silver">
+                        <img src="./asset/silver.png" alt="Silver">
                     </figure>
-                    <p>Balogun Silver</p>
-                </div>
-
-                <!----
-                <div class="card">
-                    <figure>
-                        <img src="./asset/ire.png" alt="Smart">
-                    </figure>
-                    <p>Ogunbameru Smart</p>
+                    <p>Silver</p>
                 </div>
 
                 <div class="card">
                     <figure>
-                        <img src="./asset/tomiwa.png" alt="Max">
+                        <img src="./asset/smart.jpeg" alt="Smart">
                     </figure>
-                    <p>Ayo Adekola</p>
+                    <p>Smart</p>
                 </div>
-            -->
+
+                <div class="card">
+                    <figure>
+                        <img src="./asset/ayo.png" alt="Max">
+                    </figure>
+                    <p>Max Injector</p>
+                </div>
+            
             </div>
         </section>
 
