xend logo updated

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                 <article class="card">
                     <header>
-                        <img src="./asset/android-chrome-192x192.png" alt="Xendlife">
+                        <img src="./asset/xend.png" alt="Xendlife">
                         <h3>Xendlife</h3>
                     </header>
                     <p>
